Update anaconda3 docker file.
Increment version.
Add comment on deploying to bamboo.
Update notebooks

--- a/doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb
+++ b/doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb
@@ -5,10 +5,10 @@
    "id": "393c2a39",
    "metadata": {
     "papermill": {
-     "duration": 0.008214,
-     "end_time": "2023-07-19T21:39:29.579099",
+     "duration": 0.004949,
+     "end_time": "2023-07-31T19:11:51.637624",
      "exception": false,
-     "start_time": "2023-07-19T21:39:29.570885",
+     "start_time": "2023-07-31T19:11:51.632675",
      "status": "completed"
     },
     "tags": []
@@ -24,16 +24,16 @@
    "id": "0770199a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T21:39:29.589986Z",
-     "iopub.status.busy": "2023-07-19T21:39:29.589645Z",
-     "iopub.status.idle": "2023-07-19T21:39:29.598306Z",
-     "shell.execute_reply": "2023-07-19T21:39:29.597488Z"
+     "iopub.execute_input": "2023-07-31T19:11:51.649085Z",
+     "iopub.status.busy": "2023-07-31T19:11:51.648535Z",
+     "iopub.status.idle": "2023-07-31T19:11:51.657664Z",
+     "shell.execute_reply": "2023-07-31T19:11:51.656690Z"
     },
     "papermill": {
-     "duration": 0.016593,
-     "end_time": "2023-07-19T21:39:29.600181",
+     "duration": 0.01725,
+     "end_time": "2023-07-31T19:11:51.659628",
      "exception": false,
-     "start_time": "2023-07-19T21:39:29.583588",
+     "start_time": "2023-07-31T19:11:51.642378",
      "status": "completed"
     },
     "tags": []
@@ -49,16 +49,16 @@
    "id": "96b7108f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T21:39:29.610577Z",
-     "iopub.status.busy": "2023-07-19T21:39:29.610010Z",
-     "iopub.status.idle": "2023-07-19T21:39:29.613842Z",
-     "shell.execute_reply": "2023-07-19T21:39:29.613029Z"
+     "iopub.execute_input": "2023-07-31T19:11:51.669853Z",
+     "iopub.status.busy": "2023-07-31T19:11:51.668967Z",
+     "iopub.status.idle": "2023-07-31T19:11:51.673357Z",
+     "shell.execute_reply": "2023-07-31T19:11:51.672365Z"
     },
     "papermill": {
-     "duration": 0.011044,
-     "end_time": "2023-07-19T21:39:29.615628",
+     "duration": 0.016767,
+     "end_time": "2023-07-31T19:11:51.680469",
      "exception": false,
-     "start_time": "2023-07-19T21:39:29.604584",
+     "start_time": "2023-07-31T19:11:51.663702",
      "status": "completed"
     },
     "tags": [
@@ -77,16 +77,16 @@
    "metadata": {
     "collapsed": true,
     "execution": {
-     "iopub.execute_input": "2023-07-19T21:39:29.640533Z",
-     "iopub.status.busy": "2023-07-19T21:39:29.640047Z",
-     "iopub.status.idle": "2023-07-19T21:39:33.986389Z",
-     "shell.execute_reply": "2023-07-19T21:39:33.985476Z"
+     "iopub.execute_input": "2023-07-31T19:11:51.715193Z",
+     "iopub.status.busy": "2023-07-31T19:11:51.714611Z",
+     "iopub.status.idle": "2023-07-31T19:11:55.942952Z",
+     "shell.execute_reply": "2023-07-31T19:11:55.941904Z"
     },
     "papermill": {
-     "duration": 4.353962,
-     "end_time": "2023-07-19T21:39:33.988727",
+     "duration": 4.235855,
+     "end_time": "2023-07-31T19:11:55.945338",
      "exception": false,
-     "start_time": "2023-07-19T21:39:29.634765",
+     "start_time": "2023-07-31T19:11:51.709483",
      "status": "completed"
     },
     "tags": []
@@ -109,10 +109,10 @@
    "id": "0c5a54a3",
    "metadata": {
     "papermill": {
-     "duration": 0.004987,
-     "end_time": "2023-07-19T21:39:33.998838",
+     "duration": 0.004308,
+     "end_time": "2023-07-31T19:11:55.955074",
      "exception": false,
-     "start_time": "2023-07-19T21:39:33.993851",
+     "start_time": "2023-07-31T19:11:55.950766",
      "status": "completed"
     },
     "tags": []
@@ -127,16 +127,16 @@
    "id": "1d80b72a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T21:39:34.009822Z",
-     "iopub.status.busy": "2023-07-19T21:39:34.008981Z",
-     "iopub.status.idle": "2023-07-19T21:39:46.825310Z",
-     "shell.execute_reply": "2023-07-19T21:39:46.824425Z"
+     "iopub.execute_input": "2023-07-31T19:11:55.965646Z",
+     "iopub.status.busy": "2023-07-31T19:11:55.964846Z",
+     "iopub.status.idle": "2023-07-31T19:12:17.457398Z",
+     "shell.execute_reply": "2023-07-31T19:12:17.456416Z"
     },
     "papermill": {
-     "duration": 12.824522,
-     "end_time": "2023-07-19T21:39:46.827652",
+     "duration": 21.500645,
+     "end_time": "2023-07-31T19:12:17.459841",
      "exception": false,
-     "start_time": "2023-07-19T21:39:34.003130",
+     "start_time": "2023-07-31T19:11:55.959196",
      "status": "completed"
     },
     "tags": []
@@ -146,7 +146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-19 21:39:34,184 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/528017428\n"
+      "2023-07-31 19:11:56,213 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/528017428\n"
      ]
     },
     {
@@ -248,10 +248,10 @@
    "id": "615603f0",
    "metadata": {
     "papermill": {
-     "duration": 0.004957,
-     "end_time": "2023-07-19T21:39:46.837871",
+     "duration": 0.004553,
+     "end_time": "2023-07-31T19:12:17.471573",
      "exception": false,
-     "start_time": "2023-07-19T21:39:46.832914",
+     "start_time": "2023-07-31T19:12:17.467020",
      "status": "completed"
     },
     "tags": []
@@ -266,16 +266,16 @@
    "id": "b84d9a20",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T21:39:46.848810Z",
-     "iopub.status.busy": "2023-07-19T21:39:46.848316Z",
-     "iopub.status.idle": "2023-07-19T21:39:47.406631Z",
-     "shell.execute_reply": "2023-07-19T21:39:47.405462Z"
+     "iopub.execute_input": "2023-07-31T19:12:17.482490Z",
+     "iopub.status.busy": "2023-07-31T19:12:17.481943Z",
+     "iopub.status.idle": "2023-07-31T19:12:18.087456Z",
+     "shell.execute_reply": "2023-07-31T19:12:18.086462Z"
     },
     "papermill": {
-     "duration": 0.56728,
-     "end_time": "2023-07-19T21:39:47.409756",
+     "duration": 0.613622,
+     "end_time": "2023-07-31T19:12:18.089692",
      "exception": false,
-     "start_time": "2023-07-19T21:39:46.842476",
+     "start_time": "2023-07-31T19:12:17.476070",
      "status": "completed"
     },
     "tags": []
@@ -307,10 +307,10 @@
    "id": "642c4135",
    "metadata": {
     "papermill": {
-     "duration": 0.005351,
-     "end_time": "2023-07-19T21:39:47.420150",
+     "duration": 0.004851,
+     "end_time": "2023-07-31T19:12:18.099497",
      "exception": false,
-     "start_time": "2023-07-19T21:39:47.414799",
+     "start_time": "2023-07-31T19:12:18.094646",
      "status": "completed"
     },
     "tags": []
@@ -325,16 +325,16 @@
    "id": "a44cc00c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T21:39:47.432399Z",
-     "iopub.status.busy": "2023-07-19T21:39:47.431609Z",
-     "iopub.status.idle": "2023-07-19T21:39:47.609847Z",
-     "shell.execute_reply": "2023-07-19T21:39:47.608664Z"
+     "iopub.execute_input": "2023-07-31T19:12:18.111453Z",
+     "iopub.status.busy": "2023-07-31T19:12:18.111124Z",
+     "iopub.status.idle": "2023-07-31T19:12:18.323606Z",
+     "shell.execute_reply": "2023-07-31T19:12:18.322619Z"
     },
     "papermill": {
-     "duration": 0.187008,
-     "end_time": "2023-07-19T21:39:47.612101",
+     "duration": 0.221195,
+     "end_time": "2023-07-31T19:12:18.325826",
      "exception": false,
-     "start_time": "2023-07-19T21:39:47.425093",
+     "start_time": "2023-07-31T19:12:18.104631",
      "status": "completed"
     },
     "tags": []
@@ -360,10 +360,10 @@
    "id": "92555290",
    "metadata": {
     "papermill": {
-     "duration": 0.005483,
-     "end_time": "2023-07-19T21:39:47.622935",
+     "duration": 0.00504,
+     "end_time": "2023-07-31T19:12:18.336122",
      "exception": false,
-     "start_time": "2023-07-19T21:39:47.617452",
+     "start_time": "2023-07-31T19:12:18.331082",
      "status": "completed"
     },
     "tags": []
@@ -378,16 +378,16 @@
    "id": "ffe96a0c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T21:39:47.635274Z",
-     "iopub.status.busy": "2023-07-19T21:39:47.634668Z",
-     "iopub.status.idle": "2023-07-19T21:39:49.599561Z",
-     "shell.execute_reply": "2023-07-19T21:39:49.598288Z"
+     "iopub.execute_input": "2023-07-31T19:12:18.348349Z",
+     "iopub.status.busy": "2023-07-31T19:12:18.347566Z",
+     "iopub.status.idle": "2023-07-31T19:12:20.445505Z",
+     "shell.execute_reply": "2023-07-31T19:12:20.444509Z"
     },
     "papermill": {
-     "duration": 1.973605,
-     "end_time": "2023-07-19T21:39:49.601966",
+     "duration": 2.106903,
+     "end_time": "2023-07-31T19:12:20.448012",
      "exception": false,
-     "start_time": "2023-07-19T21:39:47.628361",
+     "start_time": "2023-07-31T19:12:18.341109",
      "status": "completed"
     },
     "tags": []
@@ -415,10 +415,10 @@
    "id": "63d4282d",
    "metadata": {
     "papermill": {
-     "duration": 0.005276,
-     "end_time": "2023-07-19T21:39:49.612766",
+     "duration": 0.005802,
+     "end_time": "2023-07-31T19:12:20.459859",
      "exception": false,
-     "start_time": "2023-07-19T21:39:49.607490",
+     "start_time": "2023-07-31T19:12:20.454057",
      "status": "completed"
     },
     "tags": []
@@ -433,16 +433,16 @@
    "id": "00053c56",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T21:39:49.625277Z",
-     "iopub.status.busy": "2023-07-19T21:39:49.624641Z",
-     "iopub.status.idle": "2023-07-19T21:39:54.371355Z",
-     "shell.execute_reply": "2023-07-19T21:39:54.370486Z"
+     "iopub.execute_input": "2023-07-31T19:12:20.471571Z",
+     "iopub.status.busy": "2023-07-31T19:12:20.471205Z",
+     "iopub.status.idle": "2023-07-31T19:12:25.488730Z",
+     "shell.execute_reply": "2023-07-31T19:12:25.487725Z"
     },
     "papermill": {
-     "duration": 4.75634,
-     "end_time": "2023-07-19T21:39:54.374169",
+     "duration": 5.026457,
+     "end_time": "2023-07-31T19:12:25.491389",
      "exception": false,
-     "start_time": "2023-07-19T21:39:49.617829",
+     "start_time": "2023-07-31T19:12:20.464932",
      "status": "completed"
     },
     "tags": []
@@ -470,10 +470,10 @@
    "id": "aaaea49f",
    "metadata": {
     "papermill": {
-     "duration": 0.006112,
-     "end_time": "2023-07-19T21:39:54.388070",
+     "duration": 0.00563,
+     "end_time": "2023-07-31T19:12:25.503125",
      "exception": false,
-     "start_time": "2023-07-19T21:39:54.381958",
+     "start_time": "2023-07-31T19:12:25.497495",
      "status": "completed"
     },
     "tags": []
@@ -488,16 +488,16 @@
    "id": "5a22dfea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T21:39:54.401423Z",
-     "iopub.status.busy": "2023-07-19T21:39:54.400904Z",
-     "iopub.status.idle": "2023-07-19T21:40:05.179374Z",
-     "shell.execute_reply": "2023-07-19T21:40:05.178558Z"
+     "iopub.execute_input": "2023-07-31T19:12:25.516223Z",
+     "iopub.status.busy": "2023-07-31T19:12:25.515863Z",
+     "iopub.status.idle": "2023-07-31T19:12:36.996952Z",
+     "shell.execute_reply": "2023-07-31T19:12:36.996101Z"
     },
     "papermill": {
-     "duration": 10.787678,
-     "end_time": "2023-07-19T21:40:05.181383",
+     "duration": 11.490202,
+     "end_time": "2023-07-31T19:12:36.999111",
      "exception": false,
-     "start_time": "2023-07-19T21:39:54.393705",
+     "start_time": "2023-07-31T19:12:25.508909",
      "status": "completed"
     },
     "tags": []
@@ -570,10 +570,10 @@
    "id": "264b6f1d",
    "metadata": {
     "papermill": {
-     "duration": 0.303672,
-     "end_time": "2023-07-19T21:40:05.518414",
+     "duration": 0.006743,
+     "end_time": "2023-07-31T19:12:37.014685",
      "exception": false,
-     "start_time": "2023-07-19T21:40:05.214742",
+     "start_time": "2023-07-31T19:12:37.007942",
      "status": "completed"
     },
     "tags": []
@@ -587,10 +587,10 @@
    "id": "dfaab4e6",
    "metadata": {
     "papermill": {
-     "duration": 0.805808,
-     "end_time": "2023-07-19T21:40:06.815337",
+     "duration": 0.006908,
+     "end_time": "2023-07-31T19:12:37.028125",
      "exception": false,
-     "start_time": "2023-07-19T21:40:06.009529",
+     "start_time": "2023-07-31T19:12:37.021217",
      "status": "completed"
     },
     "tags": []
@@ -605,16 +605,16 @@
    "id": "50ef0982",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T21:40:06.862031Z",
-     "iopub.status.busy": "2023-07-19T21:40:06.860647Z",
-     "iopub.status.idle": "2023-07-19T21:40:12.595301Z",
-     "shell.execute_reply": "2023-07-19T21:40:12.594405Z"
+     "iopub.execute_input": "2023-07-31T19:12:37.042945Z",
+     "iopub.status.busy": "2023-07-31T19:12:37.042576Z",
+     "iopub.status.idle": "2023-07-31T19:12:43.571488Z",
+     "shell.execute_reply": "2023-07-31T19:12:43.570589Z"
     },
     "papermill": {
-     "duration": 5.77366,
-     "end_time": "2023-07-19T21:40:12.597503",
+     "duration": 6.539007,
+     "end_time": "2023-07-31T19:12:43.573584",
      "exception": false,
-     "start_time": "2023-07-19T21:40:06.823843",
+     "start_time": "2023-07-31T19:12:37.034577",
      "status": "completed"
     },
     "tags": []
@@ -680,17 +680,17 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 45.272937,
-   "end_time": "2023-07-19T21:40:13.329295",
+   "duration": 54.174247,
+   "end_time": "2023-07-31T19:12:44.303175",
    "environment_variables": {},
    "exception": null,
    "input_path": "doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb",
-   "output_path": "/tmp/tmpge88kap4/scratch_nb.ipynb",
+   "output_path": "/tmp/tmpx0w3r040/scratch_nb.ipynb",
    "parameters": {
-    "output_dir": "/tmp/tmpge88kap4",
+    "output_dir": "/tmp/tmpx0w3r040",
     "resources_dir": "/home/runner/work/AllenSDK/AllenSDK/allensdk/internal/notebooks/resources"
    },
-   "start_time": "2023-07-19T21:39:28.056358",
+   "start_time": "2023-07-31T19:11:50.128928",
    "version": "2.4.0"
   }
  },
