--- a/doc_template/examples_root/examples/nb/brain_observatory_stimuli.ipynb
+++ b/doc_template/examples_root/examples/nb/brain_observatory_stimuli.ipynb
@@ -5,10 +5,10 @@
    "id": "0698dc8f",
    "metadata": {
     "papermill": {
-     "duration": 0.006127,
-     "end_time": "2023-07-19T23:49:50.572414",
+     "duration": 0.005108,
+     "end_time": "2023-07-31T21:52:33.898514",
      "exception": false,
-     "start_time": "2023-07-19T23:49:50.566287",
+     "start_time": "2023-07-31T21:52:33.893406",
      "status": "completed"
     },
     "tags": []
@@ -26,16 +26,16 @@
    "id": "5a52e7ef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T23:49:50.584005Z",
-     "iopub.status.busy": "2023-07-19T23:49:50.583084Z",
-     "iopub.status.idle": "2023-07-19T23:49:50.591543Z",
-     "shell.execute_reply": "2023-07-19T23:49:50.590838Z"
+     "iopub.execute_input": "2023-07-31T21:52:33.910060Z",
+     "iopub.status.busy": "2023-07-31T21:52:33.909354Z",
+     "iopub.status.idle": "2023-07-31T21:52:33.918309Z",
+     "shell.execute_reply": "2023-07-31T21:52:33.917307Z"
     },
     "papermill": {
-     "duration": 0.01615,
-     "end_time": "2023-07-19T23:49:50.593382",
+     "duration": 0.016847,
+     "end_time": "2023-07-31T21:52:33.920379",
      "exception": false,
-     "start_time": "2023-07-19T23:49:50.577232",
+     "start_time": "2023-07-31T21:52:33.903532",
      "status": "completed"
     },
     "tags": []
@@ -51,16 +51,16 @@
    "id": "1138f1cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T23:49:50.602841Z",
-     "iopub.status.busy": "2023-07-19T23:49:50.602183Z",
-     "iopub.status.idle": "2023-07-19T23:49:50.605660Z",
-     "shell.execute_reply": "2023-07-19T23:49:50.604793Z"
+     "iopub.execute_input": "2023-07-31T21:52:33.932872Z",
+     "iopub.status.busy": "2023-07-31T21:52:33.932507Z",
+     "iopub.status.idle": "2023-07-31T21:52:33.936658Z",
+     "shell.execute_reply": "2023-07-31T21:52:33.935698Z"
     },
     "papermill": {
-     "duration": 0.009883,
-     "end_time": "2023-07-19T23:49:50.607386",
+     "duration": 0.012457,
+     "end_time": "2023-07-31T21:52:33.938591",
      "exception": false,
-     "start_time": "2023-07-19T23:49:50.597503",
+     "start_time": "2023-07-31T21:52:33.926134",
      "status": "completed"
     },
     "tags": [
@@ -78,16 +78,16 @@
    "id": "be1c0a7f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T23:49:50.629955Z",
-     "iopub.status.busy": "2023-07-19T23:49:50.629273Z",
-     "iopub.status.idle": "2023-07-19T23:49:50.954239Z",
-     "shell.execute_reply": "2023-07-19T23:49:50.952714Z"
+     "iopub.execute_input": "2023-07-31T21:52:33.971949Z",
+     "iopub.status.busy": "2023-07-31T21:52:33.971370Z",
+     "iopub.status.idle": "2023-07-31T21:52:34.348009Z",
+     "shell.execute_reply": "2023-07-31T21:52:34.346925Z"
     },
     "papermill": {
-     "duration": 0.331945,
-     "end_time": "2023-07-19T23:49:50.956319",
+     "duration": 0.38745,
+     "end_time": "2023-07-31T21:52:34.350464",
      "exception": false,
-     "start_time": "2023-07-19T23:49:50.624374",
+     "start_time": "2023-07-31T21:52:33.963014",
      "status": "completed"
     },
     "tags": []
@@ -120,10 +120,10 @@
    "id": "57a3dd75",
    "metadata": {
     "papermill": {
-     "duration": 0.003981,
-     "end_time": "2023-07-19T23:49:50.964520",
+     "duration": 0.004697,
+     "end_time": "2023-07-31T21:52:34.360873",
      "exception": false,
-     "start_time": "2023-07-19T23:49:50.960539",
+     "start_time": "2023-07-31T21:52:34.356176",
      "status": "completed"
     },
     "tags": []
@@ -139,16 +139,16 @@
    "id": "86d015a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T23:49:50.974706Z",
-     "iopub.status.busy": "2023-07-19T23:49:50.973795Z",
-     "iopub.status.idle": "2023-07-19T23:50:04.319377Z",
-     "shell.execute_reply": "2023-07-19T23:50:04.316216Z"
+     "iopub.execute_input": "2023-07-31T21:52:34.373108Z",
+     "iopub.status.busy": "2023-07-31T21:52:34.372476Z",
+     "iopub.status.idle": "2023-07-31T21:52:59.423713Z",
+     "shell.execute_reply": "2023-07-31T21:52:59.422385Z"
     },
     "papermill": {
-     "duration": 13.353521,
-     "end_time": "2023-07-19T23:50:04.321855",
+     "duration": 25.059502,
+     "end_time": "2023-07-31T21:52:59.425586",
      "exception": false,
-     "start_time": "2023-07-19T23:49:50.968334",
+     "start_time": "2023-07-31T21:52:34.366084",
      "status": "completed"
     },
     "tags": []
@@ -158,7 +158,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-19 23:49:53,687 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514340576\n"
+      "2023-07-31 21:52:37,376 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514340576\n"
      ]
     },
     {
@@ -193,10 +193,10 @@
    "id": "abc48527",
    "metadata": {
     "papermill": {
-     "duration": 0.004808,
-     "end_time": "2023-07-19T23:50:04.331772",
+     "duration": 0.004522,
+     "end_time": "2023-07-31T21:52:59.435181",
      "exception": false,
-     "start_time": "2023-07-19T23:50:04.326964",
+     "start_time": "2023-07-31T21:52:59.430659",
      "status": "completed"
     },
     "tags": []
@@ -212,16 +212,16 @@
    "id": "5c8b0144",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T23:50:04.342663Z",
-     "iopub.status.busy": "2023-07-19T23:50:04.342228Z",
-     "iopub.status.idle": "2023-07-19T23:50:14.257332Z",
-     "shell.execute_reply": "2023-07-19T23:50:14.256519Z"
+     "iopub.execute_input": "2023-07-31T21:52:59.446221Z",
+     "iopub.status.busy": "2023-07-31T21:52:59.444957Z",
+     "iopub.status.idle": "2023-07-31T21:53:18.165702Z",
+     "shell.execute_reply": "2023-07-31T21:53:18.164758Z"
     },
     "papermill": {
-     "duration": 9.923001,
-     "end_time": "2023-07-19T23:50:14.259290",
+     "duration": 18.728278,
+     "end_time": "2023-07-31T21:53:18.167671",
      "exception": false,
-     "start_time": "2023-07-19T23:50:04.336289",
+     "start_time": "2023-07-31T21:52:59.439393",
      "status": "completed"
     },
     "tags": []
@@ -231,7 +231,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-19 23:50:04,396 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514422179\n"
+      "2023-07-31 21:52:59,543 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514422179\n"
      ]
     },
     {
@@ -266,10 +266,10 @@
    "id": "bb211aeb",
    "metadata": {
     "papermill": {
-     "duration": 0.024227,
-     "end_time": "2023-07-19T23:50:14.319160",
+     "duration": 0.005182,
+     "end_time": "2023-07-31T21:53:18.179136",
      "exception": false,
-     "start_time": "2023-07-19T23:50:14.294933",
+     "start_time": "2023-07-31T21:53:18.173954",
      "status": "completed"
     },
     "tags": []
@@ -285,16 +285,16 @@
    "id": "7da6fa06",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T23:50:14.353687Z",
-     "iopub.status.busy": "2023-07-19T23:50:14.352995Z",
-     "iopub.status.idle": "2023-07-19T23:50:16.242088Z",
-     "shell.execute_reply": "2023-07-19T23:50:16.240733Z"
+     "iopub.execute_input": "2023-07-31T21:53:18.190918Z",
+     "iopub.status.busy": "2023-07-31T21:53:18.190341Z",
+     "iopub.status.idle": "2023-07-31T21:53:20.214285Z",
+     "shell.execute_reply": "2023-07-31T21:53:20.213375Z"
     },
     "papermill": {
-     "duration": 1.916757,
-     "end_time": "2023-07-19T23:50:16.259241",
+     "duration": 2.032489,
+     "end_time": "2023-07-31T21:53:20.216589",
      "exception": false,
-     "start_time": "2023-07-19T23:50:14.342484",
+     "start_time": "2023-07-31T21:53:18.184100",
      "status": "completed"
     },
     "tags": []
@@ -332,10 +332,10 @@
    "id": "09357f1b",
    "metadata": {
     "papermill": {
-     "duration": 0.051986,
-     "end_time": "2023-07-19T23:50:16.339613",
+     "duration": 0.006588,
+     "end_time": "2023-07-31T21:53:20.230206",
      "exception": false,
-     "start_time": "2023-07-19T23:50:16.287627",
+     "start_time": "2023-07-31T21:53:20.223618",
      "status": "completed"
     },
     "tags": []
@@ -350,16 +350,16 @@
    "id": "c40e2880",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T23:50:16.595783Z",
-     "iopub.status.busy": "2023-07-19T23:50:16.594902Z",
-     "iopub.status.idle": "2023-07-19T23:50:16.814286Z",
-     "shell.execute_reply": "2023-07-19T23:50:16.813324Z"
+     "iopub.execute_input": "2023-07-31T21:53:20.244961Z",
+     "iopub.status.busy": "2023-07-31T21:53:20.244591Z",
+     "iopub.status.idle": "2023-07-31T21:53:20.533664Z",
+     "shell.execute_reply": "2023-07-31T21:53:20.532617Z"
     },
     "papermill": {
-     "duration": 0.373539,
-     "end_time": "2023-07-19T23:50:16.816482",
+     "duration": 0.29936,
+     "end_time": "2023-07-31T21:53:20.536108",
      "exception": false,
-     "start_time": "2023-07-19T23:50:16.442943",
+     "start_time": "2023-07-31T21:53:20.236748",
      "status": "completed"
     },
     "tags": []
@@ -397,10 +397,10 @@
    "id": "fed7f6ce",
    "metadata": {
     "papermill": {
-     "duration": 0.006681,
-     "end_time": "2023-07-19T23:50:16.830980",
+     "duration": 0.008083,
+     "end_time": "2023-07-31T21:53:20.551666",
      "exception": false,
-     "start_time": "2023-07-19T23:50:16.824299",
+     "start_time": "2023-07-31T21:53:20.543583",
      "status": "completed"
     },
     "tags": []
@@ -416,16 +416,16 @@
    "id": "a0b0297a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T23:50:16.847358Z",
-     "iopub.status.busy": "2023-07-19T23:50:16.846553Z",
-     "iopub.status.idle": "2023-07-19T23:50:17.819535Z",
-     "shell.execute_reply": "2023-07-19T23:50:17.818174Z"
+     "iopub.execute_input": "2023-07-31T21:53:20.566950Z",
+     "iopub.status.busy": "2023-07-31T21:53:20.566583Z",
+     "iopub.status.idle": "2023-07-31T21:53:21.597524Z",
+     "shell.execute_reply": "2023-07-31T21:53:21.595877Z"
     },
     "papermill": {
-     "duration": 0.986177,
-     "end_time": "2023-07-19T23:50:17.824247",
+     "duration": 1.042174,
+     "end_time": "2023-07-31T21:53:21.600633",
      "exception": false,
-     "start_time": "2023-07-19T23:50:16.838070",
+     "start_time": "2023-07-31T21:53:20.558459",
      "status": "completed"
     },
     "tags": []
@@ -461,10 +461,10 @@
    "id": "cd9cdd9a",
    "metadata": {
     "papermill": {
-     "duration": 0.00949,
-     "end_time": "2023-07-19T23:50:17.844535",
+     "duration": 0.008355,
+     "end_time": "2023-07-31T21:53:21.618239",
      "exception": false,
-     "start_time": "2023-07-19T23:50:17.835045",
+     "start_time": "2023-07-31T21:53:21.609884",
      "status": "completed"
     },
     "tags": []
@@ -479,16 +479,16 @@
    "id": "7ffd1a18",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T23:50:17.864409Z",
-     "iopub.status.busy": "2023-07-19T23:50:17.863835Z",
-     "iopub.status.idle": "2023-07-19T23:50:18.367538Z",
-     "shell.execute_reply": "2023-07-19T23:50:18.366285Z"
+     "iopub.execute_input": "2023-07-31T21:53:21.636104Z",
+     "iopub.status.busy": "2023-07-31T21:53:21.635333Z",
+     "iopub.status.idle": "2023-07-31T21:53:22.269203Z",
+     "shell.execute_reply": "2023-07-31T21:53:22.268151Z"
     },
     "papermill": {
-     "duration": 0.516029,
-     "end_time": "2023-07-19T23:50:18.369710",
+     "duration": 0.646301,
+     "end_time": "2023-07-31T21:53:22.272143",
      "exception": false,
-     "start_time": "2023-07-19T23:50:17.853681",
+     "start_time": "2023-07-31T21:53:21.625842",
      "status": "completed"
     },
     "tags": []
@@ -523,10 +523,10 @@
    "id": "d64df66f",
    "metadata": {
     "papermill": {
-     "duration": 0.009041,
-     "end_time": "2023-07-19T23:50:18.388247",
+     "duration": 0.009241,
+     "end_time": "2023-07-31T21:53:22.295508",
      "exception": false,
-     "start_time": "2023-07-19T23:50:18.379206",
+     "start_time": "2023-07-31T21:53:22.286267",
      "status": "completed"
     },
     "tags": []
@@ -542,16 +542,16 @@
    "id": "045e1866",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T23:50:18.409360Z",
-     "iopub.status.busy": "2023-07-19T23:50:18.408407Z",
-     "iopub.status.idle": "2023-07-19T23:50:38.758793Z",
-     "shell.execute_reply": "2023-07-19T23:50:38.757959Z"
+     "iopub.execute_input": "2023-07-31T21:53:22.318033Z",
+     "iopub.status.busy": "2023-07-31T21:53:22.317309Z",
+     "iopub.status.idle": "2023-07-31T21:53:55.411901Z",
+     "shell.execute_reply": "2023-07-31T21:53:55.410890Z"
     },
     "papermill": {
-     "duration": 20.363643,
-     "end_time": "2023-07-19T23:50:38.761053",
+     "duration": 33.116199,
+     "end_time": "2023-07-31T21:53:55.422276",
      "exception": false,
-     "start_time": "2023-07-19T23:50:18.397410",
+     "start_time": "2023-07-31T21:53:22.306077",
      "status": "completed"
     },
     "tags": []
@@ -561,7 +561,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-19 23:50:18,462 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/516238128\n"
+      "2023-07-31 21:53:22,419 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/516238128\n"
      ]
     },
     {
@@ -596,10 +596,10 @@
    "id": "af3112c7",
    "metadata": {
     "papermill": {
-     "duration": 0.009375,
-     "end_time": "2023-07-19T23:50:38.780457",
+     "duration": 0.009019,
+     "end_time": "2023-07-31T21:53:55.441379",
      "exception": false,
-     "start_time": "2023-07-19T23:50:38.771082",
+     "start_time": "2023-07-31T21:53:55.432360",
      "status": "completed"
     },
     "tags": []
@@ -614,16 +614,16 @@
    "id": "86abe247",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T23:50:38.800558Z",
-     "iopub.status.busy": "2023-07-19T23:50:38.799973Z",
-     "iopub.status.idle": "2023-07-19T23:50:39.017432Z",
-     "shell.execute_reply": "2023-07-19T23:50:39.016399Z"
+     "iopub.execute_input": "2023-07-31T21:53:55.467389Z",
+     "iopub.status.busy": "2023-07-31T21:53:55.466342Z",
+     "iopub.status.idle": "2023-07-31T21:53:55.744534Z",
+     "shell.execute_reply": "2023-07-31T21:53:55.743452Z"
     },
     "papermill": {
-     "duration": 0.230727,
-     "end_time": "2023-07-19T23:50:39.020381",
+     "duration": 0.296243,
+     "end_time": "2023-07-31T21:53:55.747765",
      "exception": false,
-     "start_time": "2023-07-19T23:50:38.789654",
+     "start_time": "2023-07-31T21:53:55.451522",
      "status": "completed"
     },
     "tags": []
@@ -679,17 +679,17 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 50.189115,
-   "end_time": "2023-07-19T23:50:39.653418",
+   "duration": 83.579966,
+   "end_time": "2023-07-31T21:53:56.479048",
    "environment_variables": {},
    "exception": null,
    "input_path": "doc_template/examples_root/examples/nb/brain_observatory_stimuli.ipynb",
-   "output_path": "/tmp/tmpq1tn5luq/scratch_nb.ipynb",
+   "output_path": "/tmp/tmpcr4bcu16/scratch_nb.ipynb",
    "parameters": {
-    "output_dir": "/tmp/tmpq1tn5luq",
+    "output_dir": "/tmp/tmpcr4bcu16",
     "resources_dir": "/home/runner/work/AllenSDK/AllenSDK/allensdk/internal/notebooks/resources"
    },
-   "start_time": "2023-07-19T23:49:49.464303",
+   "start_time": "2023-07-31T21:52:32.899082",
    "version": "2.4.0"
   }
  },
