--- a/doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb
+++ b/doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb
@@ -5,10 +5,10 @@
    "id": "ab898518",
    "metadata": {
     "papermill": {
-     "duration": 0.004672,
-     "end_time": "2023-07-19T22:18:29.918834",
+     "duration": 0.004056,
+     "end_time": "2023-07-31T19:58:49.537531",
      "exception": false,
-     "start_time": "2023-07-19T22:18:29.914162",
+     "start_time": "2023-07-31T19:58:49.533475",
      "status": "completed"
     },
     "tags": []
@@ -25,10 +25,10 @@
    "id": "2457b067",
    "metadata": {
     "papermill": {
-     "duration": 0.00248,
-     "end_time": "2023-07-19T22:18:29.924863",
+     "duration": 0.002569,
+     "end_time": "2023-07-31T19:58:49.543213",
      "exception": false,
-     "start_time": "2023-07-19T22:18:29.922383",
+     "start_time": "2023-07-31T19:58:49.540644",
      "status": "completed"
     },
     "tags": []
@@ -44,16 +44,16 @@
    "id": "6c46abcb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T22:18:29.932472Z",
-     "iopub.status.busy": "2023-07-19T22:18:29.931547Z",
-     "iopub.status.idle": "2023-07-19T22:18:29.940495Z",
-     "shell.execute_reply": "2023-07-19T22:18:29.939649Z"
+     "iopub.execute_input": "2023-07-31T19:58:49.550756Z",
+     "iopub.status.busy": "2023-07-31T19:58:49.550214Z",
+     "iopub.status.idle": "2023-07-31T19:58:49.559356Z",
+     "shell.execute_reply": "2023-07-31T19:58:49.558318Z"
     },
     "papermill": {
-     "duration": 0.014991,
-     "end_time": "2023-07-19T22:18:29.942555",
+     "duration": 0.015639,
+     "end_time": "2023-07-31T19:58:49.561367",
      "exception": false,
-     "start_time": "2023-07-19T22:18:29.927564",
+     "start_time": "2023-07-31T19:58:49.545728",
      "status": "completed"
     },
     "tags": []
@@ -69,16 +69,16 @@
    "id": "6ac4bacf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T22:18:29.948983Z",
-     "iopub.status.busy": "2023-07-19T22:18:29.948468Z",
-     "iopub.status.idle": "2023-07-19T22:18:29.952204Z",
-     "shell.execute_reply": "2023-07-19T22:18:29.951447Z"
+     "iopub.execute_input": "2023-07-31T19:58:49.568290Z",
+     "iopub.status.busy": "2023-07-31T19:58:49.567650Z",
+     "iopub.status.idle": "2023-07-31T19:58:49.572062Z",
+     "shell.execute_reply": "2023-07-31T19:58:49.571150Z"
     },
     "papermill": {
-     "duration": 0.00893,
-     "end_time": "2023-07-19T22:18:29.953929",
+     "duration": 0.010014,
+     "end_time": "2023-07-31T19:58:49.574001",
      "exception": false,
-     "start_time": "2023-07-19T22:18:29.944999",
+     "start_time": "2023-07-31T19:58:49.563987",
      "status": "completed"
     },
     "tags": [
@@ -96,16 +96,16 @@
    "id": "2db02eeb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T22:18:29.972632Z",
-     "iopub.status.busy": "2023-07-19T22:18:29.971993Z",
-     "iopub.status.idle": "2023-07-19T22:18:32.539551Z",
-     "shell.execute_reply": "2023-07-19T22:18:32.538297Z"
+     "iopub.execute_input": "2023-07-31T19:58:49.593573Z",
+     "iopub.status.busy": "2023-07-31T19:58:49.592853Z",
+     "iopub.status.idle": "2023-07-31T19:58:52.824256Z",
+     "shell.execute_reply": "2023-07-31T19:58:52.823253Z"
     },
     "papermill": {
-     "duration": 2.573663,
-     "end_time": "2023-07-19T22:18:32.542070",
+     "duration": 3.237029,
+     "end_time": "2023-07-31T19:58:52.826381",
      "exception": false,
-     "start_time": "2023-07-19T22:18:29.968407",
+     "start_time": "2023-07-31T19:58:49.589352",
      "status": "completed"
     },
     "tags": []
@@ -115,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-19 22:18:32,276 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/590985414\n"
+      "2023-07-31 19:58:52,031 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/590985414\n"
      ]
     },
     {
@@ -153,10 +153,10 @@
    "metadata": {
     "collapsed": true,
     "papermill": {
-     "duration": 0.002815,
-     "end_time": "2023-07-19T22:18:32.548058",
+     "duration": 0.006554,
+     "end_time": "2023-07-31T19:58:52.836211",
      "exception": false,
-     "start_time": "2023-07-19T22:18:32.545243",
+     "start_time": "2023-07-31T19:58:52.829657",
      "status": "completed"
     },
     "tags": []
@@ -172,16 +172,16 @@
    "id": "187b40f8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T22:18:32.555490Z",
-     "iopub.status.busy": "2023-07-19T22:18:32.554721Z",
-     "iopub.status.idle": "2023-07-19T22:18:32.570364Z",
-     "shell.execute_reply": "2023-07-19T22:18:32.569520Z"
+     "iopub.execute_input": "2023-07-31T19:58:52.843661Z",
+     "iopub.status.busy": "2023-07-31T19:58:52.843121Z",
+     "iopub.status.idle": "2023-07-31T19:58:52.860384Z",
+     "shell.execute_reply": "2023-07-31T19:58:52.859513Z"
     },
     "papermill": {
-     "duration": 0.021741,
-     "end_time": "2023-07-19T22:18:32.572539",
+     "duration": 0.024138,
+     "end_time": "2023-07-31T19:58:52.863120",
      "exception": false,
-     "start_time": "2023-07-19T22:18:32.550798",
+     "start_time": "2023-07-31T19:58:52.838982",
      "status": "completed"
     },
     "tags": []
@@ -257,16 +257,16 @@
    "id": "53a58933",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T22:18:32.579903Z",
-     "iopub.status.busy": "2023-07-19T22:18:32.579628Z",
-     "iopub.status.idle": "2023-07-19T22:23:41.519965Z",
-     "shell.execute_reply": "2023-07-19T22:23:41.518953Z"
+     "iopub.execute_input": "2023-07-31T19:58:52.871711Z",
+     "iopub.status.busy": "2023-07-31T19:58:52.870799Z",
+     "iopub.status.idle": "2023-07-31T20:05:03.498645Z",
+     "shell.execute_reply": "2023-07-31T20:05:03.496835Z"
     },
     "papermill": {
-     "duration": 308.953311,
-     "end_time": "2023-07-19T22:23:41.528865",
+     "duration": 370.650793,
+     "end_time": "2023-07-31T20:05:03.517553",
      "exception": false,
-     "start_time": "2023-07-19T22:18:32.575554",
+     "start_time": "2023-07-31T19:58:52.866760",
      "status": "completed"
     },
     "tags": []
@@ -276,8 +276,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-19 22:23:16,294 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540997912\n",
-      "2023-07-19 22:23:32,824 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540653508\n"
+      "2023-07-31 20:04:18,294 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540997912\n",
+      "2023-07-31 20:04:42,427 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540653508\n"
      ]
     },
     {
@@ -338,16 +338,16 @@
    "id": "1d72ff29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-19T22:23:41.555580Z",
-     "iopub.status.busy": "2023-07-19T22:23:41.554928Z",
-     "iopub.status.idle": "2023-07-19T22:23:41.570907Z",
-     "shell.execute_reply": "2023-07-19T22:23:41.570212Z"
+     "iopub.execute_input": "2023-07-31T20:05:03.533418Z",
+     "iopub.status.busy": "2023-07-31T20:05:03.533045Z",
+     "iopub.status.idle": "2023-07-31T20:05:03.548397Z",
+     "shell.execute_reply": "2023-07-31T20:05:03.547560Z"
     },
     "papermill": {
-     "duration": 0.034037,
-     "end_time": "2023-07-19T22:23:41.572849",
+     "duration": 0.026143,
+     "end_time": "2023-07-31T20:05:03.550464",
      "exception": false,
-     "start_time": "2023-07-19T22:23:41.538812",
+     "start_time": "2023-07-31T20:05:03.524321",
      "status": "completed"
     },
     "tags": []
@@ -442,17 +442,17 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 313.356983,
-   "end_time": "2023-07-19T22:23:42.205368",
+   "duration": 375.859032,
+   "end_time": "2023-07-31T20:05:04.379741",
    "environment_variables": {},
    "exception": null,
    "input_path": "doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb",
-   "output_path": "/tmp/tmpg_msuwcj/scratch_nb.ipynb",
+   "output_path": "/tmp/tmp_w_agyz_/scratch_nb.ipynb",
    "parameters": {
-    "output_dir": "/tmp/tmpg_msuwcj",
+    "output_dir": "/tmp/tmp_w_agyz_",
     "resources_dir": "/home/runner/work/AllenSDK/AllenSDK/allensdk/internal/notebooks/resources"
    },
-   "start_time": "2023-07-19T22:18:28.848385",
+   "start_time": "2023-07-31T19:58:48.520709",
    "version": "2.4.0"
   }
  },
