Test for nan and <0 for change frame.

--- a/doc_template/examples_root/examples/nb/aligning_behavioral_data_to_task_events_with_the_stimulus_and_trials_tables.ipynb
+++ b/doc_template/examples_root/examples/nb/aligning_behavioral_data_to_task_events_with_the_stimulus_and_trials_tables.ipynb
@@ -1241,7 +1241,7 @@
     "    '''\n",
     "    table = stimulus_presentations\n",
     "    change_frame = row['change_frame']\n",
-    "    if np.isnan(change_frame):\n",
+    "    if np.isnan(change_frame) or change_frame < 0:\n",
     "        return np.nan\n",
     "    \n",
     "    change_time = table[table.start_frame==change_frame]\\\n",
